--- a/OopsAllLalafells.csproj
+++ b/OopsAllLalafells.csproj
@@ -7,7 +7,7 @@
         <Description>Turn everyone around you into Lalafells (or other races)!</Description>
         <Copyright>(c) 2021 Avaflow</Copyright>
         <PackageProjectUrl>https://ava.dev/oops-all-lalafells/</PackageProjectUrl>
-        <TargetFramework>net5.0-windows</TargetFramework>
+        <TargetFramework>net6.0-windows</TargetFramework>
         <LangVersion>9.0</LangVersion>
 		<RestorePackagesWithLockFile>true</RestorePackagesWithLockFile>
     </PropertyGroup>
@@ -20,6 +20,10 @@
     <PropertyGroup Condition=" '$(Configuration)' == 'Debug' ">
       <DefineConstants>TRACE,DEBUG</DefineConstants>
     </PropertyGroup>
+
+	<PropertyGroup>
+		<DalamudLibPath>$(appdata)\XIVLauncher\addon\Hooks\dev\</DalamudLibPath>
+	</PropertyGroup>
 
     <ItemGroup>
         <PackageReference Include="DalamudPackager" Version="2.1.8" />
