--- a/OopsAllLalafells.csproj
+++ b/OopsAllLalafells.csproj
@@ -1,9 +1,9 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
 
     <PropertyGroup>
-        <Authors>Avaflow</Authors>
+        <Authors>Avaflow, Ars Magna</Authors>
         <Company>Avaflow</Company>
-        <Version>1.3.0.0</Version>
+        <Version>1.3.2.0</Version>
         <Description>Turn everyone around you into Lalafells (or other races)!</Description>
         <Copyright>(c) 2021 Avaflow</Copyright>
         <PackageProjectUrl>https://ava.dev/oops-all-lalafells/</PackageProjectUrl>
