--- a/OopsAllLalafellsSRE/OopsAllLalafellsSRE.csproj
+++ b/OopsAllLalafellsSRE/OopsAllLalafellsSRE.csproj
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <Project Sdk="Microsoft.NET.Sdk">
-  <Import Project="Dalamud.Plugin.Bootstrap.targets"/>
+  <Import Project="Dalamud.Plugin.Bootstrap.targets" />
 
   <PropertyGroup>
     <Authors></Authors>
@@ -12,4 +12,8 @@
     <PackageLicenseExpression>AGPL-3.0-or-later</PackageLicenseExpression>
     <IsPackable>false</IsPackable>
   </PropertyGroup>
+
+  <ItemGroup>
+    <PackageReference Include="Penumbra.Api" Version="1.0.12" />
+  </ItemGroup>
 </Project>
