--- a/OopsAllLalafellsSRE/OopsAllLalafellsSRE.csproj
+++ b/OopsAllLalafellsSRE/OopsAllLalafellsSRE.csproj
@@ -16,4 +16,8 @@
     <ItemGroup>
         <PackageReference Include="Penumbra.Api" Version="5.3.0" />
     </ItemGroup>
+
+    <ItemGroup>
+      <PackageReference Update="DalamudPackager" Version="11.0.0" />
+    </ItemGroup>
 </Project>
