--- a/OopsAllLalafellsSRE/OopsAllLalafellsSRE.csproj
+++ b/OopsAllLalafellsSRE/OopsAllLalafellsSRE.csproj
@@ -6,9 +6,9 @@
         <Authors></Authors>
         <Company></Company>
         <Version>2.0.2.3</Version>
-        <Description>Turn everyone around you into Lalafells (or other races!)</Description>
+        <Description>Turn everyone around you into a nudist.</Description>
         <Copyright></Copyright>
-        <PackageProjectUrl>https://github.com/kelvin124124/OopsAllLalafellsSRE</PackageProjectUrl>
+        <PackageProjectUrl>https://github.com/senko-forks/OopsAllNaked</PackageProjectUrl>
         <PackageLicenseExpression>AGPL-3.0-or-later</PackageLicenseExpression>
         <IsPackable>false</IsPackable>
     </PropertyGroup>
