--- a/OopsAllNudist/OopsAllNudist.csproj
+++ b/OopsAllNudist/OopsAllNudist.csproj
@@ -1,11 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
-<Project Sdk="Microsoft.NET.Sdk">
-    <Import Project="Dalamud.Plugin.Bootstrap.targets" />
-
+<Project Sdk="Dalamud.NET.Sdk/12.0.2">
     <PropertyGroup>
         <Authors></Authors>
         <Company></Company>
-        <Version>2.0.3.6</Version>
+        <Version>2.0.3.7</Version>
         <Description>Turn everyone around you into a nudist.</Description>
         <Copyright></Copyright>
         <PackageProjectUrl>https://github.com/tigurand/OopsAllNudist</PackageProjectUrl>
@@ -16,9 +14,5 @@
 
     <ItemGroup>
         <PackageReference Include="Penumbra.Api" Version="5.6.1" />
-    </ItemGroup>
-
-    <ItemGroup>
-      <PackageReference Update="DalamudPackager" Version="12.0.0" />
     </ItemGroup>
 </Project>
