Implemented auto redraw for self only

--- a/OopsAllNudist/OopsAllNudist.csproj
+++ b/OopsAllNudist/OopsAllNudist.csproj
@@ -13,6 +13,7 @@
     </PropertyGroup>
 
     <ItemGroup>
+        <PackageReference Include="Glamourer.Api" Version="2.6.0" />
         <PackageReference Include="Penumbra.Api" Version="5.10.0" />
     </ItemGroup>
 </Project>
