--- a/OopsAllNudist/OopsAllNudist.csproj
+++ b/OopsAllNudist/OopsAllNudist.csproj
@@ -1,9 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
-<Project Sdk="Dalamud.NET.Sdk/12.0.2">
+<Project Sdk="Dalamud.NET.Sdk/13.0.0">
     <PropertyGroup>
         <Authors></Authors>
         <Company></Company>
-        <Version>2.2.4.4</Version>
+        <Version>2.2.4.5</Version>
         <Description>Turn everyone around you into a nudist.</Description>
         <Copyright></Copyright>
         <PackageProjectUrl>https://github.com/tigurand/OopsAllNudist</PackageProjectUrl>
@@ -15,5 +15,9 @@
     <ItemGroup>
         <PackageReference Include="Glamourer.Api" Version="2.6.0" />
         <PackageReference Include="Penumbra.Api" Version="5.10.0" />
+    </ItemGroup>
+
+    <ItemGroup>
+      <PackageReference Update="DalamudPackager" Version="13.0.0" />
     </ItemGroup>
 </Project>
