--- a/OopsAllNudist/OopsAllNudist.csproj
+++ b/OopsAllNudist/OopsAllNudist.csproj
@@ -1,23 +1,25 @@
 <?xml version="1.0" encoding="utf-8"?>
-<Project Sdk="Dalamud.NET.Sdk/13.0.0">
+<Project Sdk="Dalamud.NET.Sdk/14.0.1">
     <PropertyGroup>
         <Authors></Authors>
         <Company></Company>
-        <Version>2.2.4.14</Version>
+        <Version>2.2.5.0</Version>
         <Description>Turn everyone around you into a nudist.</Description>
         <Copyright></Copyright>
         <PackageProjectUrl>https://github.com/tigurand/OopsAllNudist</PackageProjectUrl>
         <PackageLicenseExpression>AGPL-3.0-or-later</PackageLicenseExpression>
         <IsPackable>false</IsPackable>
-        <TargetFramework>net9.0-windows7.0</TargetFramework>
+        <TargetFramework>net10.0-windows7.0</TargetFramework>
     </PropertyGroup>
 
     <ItemGroup>
-        <PackageReference Include="Glamourer.Api" Version="2.6.0" />
-        <PackageReference Include="Penumbra.Api" Version="5.12.0" />
+        <PackageReference Include="ECommons" Version="3.1.0.5" />
+        <PackageReference Include="Glamourer.Api" Version="2.8.0" />
+        <PackageReference Include="Penumbra.Api" Version="5.13.0" />
     </ItemGroup>
 
     <ItemGroup>
-      <PackageReference Update="DalamudPackager" Version="13.1.0" />
+      <PackageReference Update="DalamudPackager" Version="14.0.1" />
+      <PackageReference Update="DotNet.ReproducibleBuilds" Version="1.2.39" />
     </ItemGroup>
 </Project>
